[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mhds-pooling"
dynamic = ["version"]
description = "Mental Health Digital Shadows — pooling system and dashboard for PENSO / SUPPORT ME research"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Rodolfo Rizzi", email = "rodolfo.rizzi.r@gmail.com" },
]
keywords = ["mental-health", "llm", "panel", "dashboard", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=3.0",
    "panel>=1.4",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "ipython",
]

[project.urls]
Homepage      = "https://github.com/RodolfoRizzi/MHDS-pooling-system"
Repository    = "https://github.com/RodolfoRizzi/MHDS-pooling-system"

[tool.hatch.version]
path = "src/mhds_pooling/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mhds_pooling"]
